# data_science_toolbox

./: README.md  pyproject.toml  requirements.txt
data_science_toolbox/data_checks/dataframes/: column_dtypes.py
data_science_toolbox/data_checks/dictionary/: check_dictionary_keys.py
data_science_toolbox/etl/custom_transformers/DF/: DF.py
data_science_toolbox/gists/: process_data copy.py  process_data.py  run_notebook_report.py
data_science_toolbox/io/: config_dict_from_python_fpath.py  directory_tree.py  excel_to_df_dict.py  file_search_and_replace.py  get_absolute_fpath.py  read_data.py  unique_path.py
data_science_toolbox/text/: pii.py
data_science_utils/etl/: data_checks.py
data_science_utils/gists/: process_data.py
ds_utils/etl/custom_transformers/DF/.ipynb_checkpoints/: DF-checkpoint.py
ds_utils/gists/: run_notebook_report.py
ds_utils/pandas/profiling/: data_dictionary.py
tests/data_checks/dataframes/: test_column_dtypes.py
tests/data_checks/dictionary/: test_check_dictionary_keys.py
tests/etl/: test_data_checks.py
tests/io/: test_config_dict_from_python_fpath.py  test_directory_tree.py  test_excel_to_df_dict.py  test_file_search_and_replace.py  test_get_absolute_fpath.py  test_read_data.py  test_unique_path.py
tests/io/data/: flag.hdf  flag.pickle  flag.xlsx  test_df_dict.xlsx
tests/io/python_config_dicts/: test_config_1.py  test_config_2.py
tests/pd/profiling/: test_columns.py
tests/text/: test_pii.py
