[tool.poetry]
name = "data_science_toolbox"
version = "0.1.4"
description = "Various code to aid in data science projects for tasks involving data cleaning, ETL, EDA, NLP, viz, feature engineering, feature selection, model validation, etc."
readme = "README.md"
authors = ["safurrier <safurrier@gmail.com>"]
license = "MIT"
homepage = "https://github.com/safurrier/data_science_toolbox"


[tool.poetry.dependencies]
python = "^3.6"
pytest = "^5.2.4"
click = "^7.0"
papermill = "^1.2.1"

scipy = "^1.1.0"
numpy = "^1.15.2"
scikit_learn = "^0.21.0"

pandas_profiling = "^2.3.0"
matplotlib = "^3.0.2"
seaborn = "^0.9.0"

pandas = "^0.25.3"
tables = "^3.6.1"
openpyxl = "^3.0.1"
dask = "^2.8.1"
xlrd = "^1.0.0"

spacy = "^2.2.3"
textacy = "^0.5.0"
textblob = "^0.15.3"
vaderSentiment = "^3.2.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
